<resources>
    <string name="app_name">Encrypted Text Message App</string>
    <string name="EnterKey">key</string>
    <string name="EnterText">Enter your text here</string>
    <string name="Encrypt_btn">ENCRYPT</string>
    <string name="encryptedTextView">TextView</string>
    <string name="send_btn">SEND</string>
    <string name="phoneNumber">Enter Phone Number</string>
    <string name="decrypt_text">Paste the garbeled text</string>
    <string name="decrypt_btn">DECRYPT</string>
    <string name="enter_dec_key">Enter key to decrypt (optional)</string>
</resources>